--- a/Index.html
+++ b/Index.html
@@ -35,6 +35,7 @@
     </div>
     <div class="divMain2" id="thxDiv">
         <div class="illustraion">
+            <img src="/Images/illustration-thank-you.svg" alt="">
         </div>
         <div class="Rating">
             <p id="txtRate">You selected x out of 5</p>
