--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,9 @@
     <title>Frontend Mentor</title>
 </head>
 <body>
-    <div class="divMain" id="mainDiv">
+    <main class="divMain" id="mainDiv">
         <div class="divStar">
-            <img src="Images/icon-star.svg" class="star">
+            <img src="Images/icon-star.svg" class="star" alt="">
         </div>
         <div class="divText">
             <h1>How did we do?</h1>
@@ -32,7 +32,7 @@
                 </fieldset>
             </form>
         </div>
-    </div>
+    </main>
     <div class="divMain2" id="thxDiv">
         <div class="illustraion">
             <img src="/Images/illustration-thank-you.svg" alt="">
